2005-04-09  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/dns.c: Fixed GetAddr() when dealing with gethostbyname_r
	  calls. In some/many cases we ended up in an infinite loop.

2005-04-08  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/nsd.h: Added non-gnu implementation of poll() for
	* nsd/unix.c: platforms not implementing it (Darwin)

2005-04-03  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd.nsmain.c: fixed make test, argumens nowe processed
	  until first non dash parameter.

2005-04-03  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsmain.c: changed command line parsing from getopt to
	  simple manual processing thus getopt is not needed anymore.
	* nsd/getopt.c: removed because no needed anymore

2005-04-02  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/driver.c:
	* nsd/tclinit.c:
	* nsd/nsmain.c: Add -c command line option which causes the server
	to start in command mode, reading commands from stdin and
	executing them like a tclsh.

	* Makefile:
	* tests/test.nscfg:
	* tests/all.tcl: Add new Makefile targets test, runtest and gdb
	which start the server in command mode.  Modify the test runner
	and add a test server config file.

	* tests/http.test:
	* tests/ns_addrbyhost.test:
	* tests/ns_adp_compress.test:
	* tests/ns_hostbyaddr.test:
	* tests/ns_hrefs.test:
	* tests/ns_parseargs.test: Update tests to use tlctest syntax and
	features.

2005-04-02  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/tclcmds.c: added synonyms for ns_uuencode/ns_uudecode procs
	  as ns_base64encode/ns_base64decode, because those functions actually
	  do base64 encoding
	* nsd/tclmisc.c:
	* nsd/uuencode.c: modified uuencode/decode to support
	  string buffers any size and be compatible with GNU uuencode,
	  i.e. wrapping lines to be 60 chars.

2005-03-28  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsd.h:
	* nsd/info.c:
	* nsd/op.c:
	* nsd/urlspace.c: Added support for ns_info filters, 
	  ns_info traces, ns_info requestprocs commands using new 